# saiph

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  Makefile  README.md  U  V  Z.csv  __init__.py  bandit.yaml  dim_test.ipynb  famd.py  inverse_standard_saved  justfile  mca.py  pca.py  projection.py  pyproject.toml  release.py  ruff.toml  s  setup.cfg  visualization.py
.github/: dependabot.yml
.github/workflows/: pr-title.yml  prepare-release.yml  release.yml  saiph-ci.yml
docs/: conf.py  contributing.md  index.rst  reference.rst  requirements.txt  sg_execution_times.rst  tutorial.rst
docs/example/: plot_example.py
docs/example/auto_examples/: plot_example.rst
docs/source/: conf.py  index.rst  modules.rst  reference.rst  saiph.rst
docs/source/example/: README.rst  plot_example.py
fixtures/: df_mixed.csv  wbcd_supplemental.csv
saiph/: __init__.py  backend.py  conftest.py  contribution.py  contribution_test.py  data_class.py  debug_inverse_mca.py  encoding.py  encoding_test.py  exception.py  famd.py  famd_test.py  inverse_mca_test.py  inverse_transform.py  inverse_transform_test.py  mca.py  mca_test.py  models.py  models_test.py  pca.py  pca_test.py  projection.py  projection_test.py  serializer.py  serializer_test.py  svd.py  test_utils.py  truncated_svd_test.py  visualization.py
saiph/reduction/: __init__.py  famd.py  famd_sparse.py  famd_sparse_test.py  famd_test.py  mca.py  mca_test.py  pca.py  pca_test.py
saiph/reduction/utils/: bulk.py  check_params.py  common.py  common_test.py  svd.py  svd_benchmarks.py  svd_test.py
saiph/tests/: benchmark_test.py  profile_cpu.py  profile_memory.py
tests/fixtures/: wbcd_supplemental.csv  wbcd_supplemental_coordinates.csv  wbcd_supplemental_coordinates_famd.csv  wbcd_supplemental_coordinates_mca_linux.csv  wbcd_supplemental_coordinates_mca_macos.csv
