[project]
name = "saiph"
# Also modify in saiph/__init__.py
version = "2.0.3"
description = "A projection package"
authors = [
    {name = "Octopize", email = "help@octopize.io"}
]
license = {text = "Apache-2.0"}
requires-python = ">=3.10,<4.0"
dependencies = [
    "pandas>=2.2.2",
    "numpy>=1,<2",
    "scipy>=1.14,<2",
    "scikit-learn>=1.0,<2",
    "toolz>=1,<2",
    "pydantic>=2,<3",
    "msgspec>=0.18.5,<0.19",
]

[project.optional-dependencies]
matplotlib = ["matplotlib>=3.5.2,<4"]
dev = [
    "ipykernel>=6.4,<7",
    "jupyter>=1.0,<2",
    "isort>=5.9,<6",
    "pytest>=8.2.2,<9",
    "pydocstyle>=6.1,<7",
    "mypy>=1.10.1,<2",
    "black[jupyter]>=22.1.0,<25",
    "flit>=3.4.0,<4",
    "flake8>=7.1.0,<8",
    "flake8-docstrings>=1.6.0,<2",
    "flake8-black>=0.3.2,<0.4",
    "flake8-isort>=6.1.1,<7",
    "flake8-tidy-imports>=4.6.0,<5",
    "flake8-eradicate>=1.2.0,<2",
    "flake8-printf-formatting>=1.1.2,<2",
    "flake8-use-fstring>=1.3,<2",
    "flake8-print>=4.0.0,<5",
    "py-spy>=0.3.11,<0.4",
    "typer>=0.4.1,<0.5",
    "Faker>=13.6.0,<14",
    "tqdm>=4.64.0,<5",
    "pytest-benchmark>=4.0.0,<5",
    "doubles>=1.5.3,<2",
    "ipdb>=0.13.9,<0.14",
    "bandit>=1.7.4,<2",
]
doc = [
    "Sphinx<6",
    "sphinx-rtd-theme>=1.1.1,<2",
    "sphinx-gallery>=0.11.1,<0.12",
    "matplotlib>=3.5.2,<4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
filterwarnings = [
    "error"
]
markers = [
    "slow_benchmark: marks benchmarks as slow (deselect with '-m \"not slow_benchmark\"')",
]

python_files = "*_test.py"
addopts = "--tb=short"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "nocov",
    "if TYPE_CHECKING:",
]

[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/black_compatibility.html
profile = "black"

[tool.coverage.run]
branch = true

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "pandas.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sklearn.utils.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "toolz.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "doubles.*"
ignore_missing_imports = true

