[project]
name = "saiph"
# Also modify in saiph/__init__.py
version = "2.0.8"
description = "A projection package"
authors = [
    {name = "Octopize", email = "help@octopize.io"}
]
license = {text = "Apache-2.0"}
requires-python = ">=3.11,<3.14"
dependencies = [
    "pandas>=2.2.2",
    "numpy>=1",
    "scipy>=1.14",
    "scikit-learn>=1.0",
    "toolz>=1",
    "pydantic>=2",
    "msgspec>=0.19",
]

[project.optional-dependencies]
matplotlib = ["matplotlib>=3.5.2"]

[dependency-groups]
dev = [
    "ipykernel>=6.4",
    "jupyter>=1.0",
    "pytest>=8.2.2",
    "mypy>=1.10.1",
    "ruff>=0.8.0",
    "flit>=3.4.0",
    "py-spy>=0.3.11",
    "typer>=0.4.1",
    "Faker>=13.6.0",
    "tqdm>=4.64.0",
    "pytest-benchmark>=4.0.0",
    "doubles>=1.5.3",
    "ipdb>=0.13.9",
]
doc = [
    "Sphinx>=8",
    "sphinx-rtd-theme>=3",
    "sphinx-gallery>=0.19",
    "matplotlib>=3.5.2",
]

[tool.hatchling.build.targets.wheel]
packages = ["saiph"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
filterwarnings = [
    "error"
]
markers = [
    "slow_benchmark: marks benchmarks as slow (deselect with '-m \"not slow_benchmark\"')",
]

python_files = "*_test.py"
addopts = "--tb=short"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "nocov",
    "if TYPE_CHECKING:",
]

[tool.coverage.run]
branch = true

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "pandas.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sklearn.utils.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "toolz.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "doubles.*"
ignore_missing_imports = true

